--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
-<!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>NG6-Starter by @AngularClass</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,21 +10,10 @@
     <meta name="description" content="NG6-Starter by @AngularClass">
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <base href="/">
-  </head>
-  <body ng-app="app" ng-strict-di ng-cloak>
+</head>
 
-    <app>
-      Loading...
-    </app>
+<body data-ng-app='testapp'>
+    <todo-list></todo-list>
+</body>
 
-    <!-- Google Analytics: change UA-71073175-2 to be your site's ID -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-71073175-2', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </body>
 </html>
